--- a/logstash/pipelines/output/99_opensearch_output.conf
+++ b/logstash/pipelines/output/99_opensearch_output.conf
@@ -1,5 +1,5 @@
 output {
-  elasticsearch {
+  opensearch {
     id => "output_elasticsearch_moloch"
     hosts => "${OS_HOSTS:opensearch:9200}"
     manage_template => false
