--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3604,7 +3604,7 @@ filter {
                add_tag => [ "_missing_timestamp" ] }
     }
 
-    # convert @timestamp to UNIX to use native kibana features
+    # convert @timestamp to UNIX to use native dashboards features
     date {
       id => "date_zeek_ts"
       match => [ "[zeek][ts]", "UNIX" ]
