--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,12 +45,12 @@ http {
     server htadmin:80;
   }
 
-  upstream docker-kibana {
+  upstream docker-dashboards {
     server dashboards:5601;
   }
 
-  upstream docker-kibana-maps {
-    server kibana-helper:28991;
+  upstream docker-dashboards-maps {
+    server dashboards-helper:28991;
   }
 
   upstream docker-opensearch {
@@ -127,7 +127,7 @@ http {
       proxy_set_header Host arkime.malcolm.local;
     }
 
-    # Arkime -> Kibana shortcut
+    # Arkime -> Dashboards shortcut
     location ~* ^/idmol2kib(.*) {
 
       set $filter_start_time now-1d;
@@ -150,13 +150,13 @@ http {
         set $filter_value $arg_value;
       }
 
-      rewrite ^/idmol2kib/(.*) /kibana/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
-      proxy_pass http://docker-kibana;
+      rewrite ^/idmol2kib/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
+      proxy_pass http://docker-dashboards;
       proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
+      proxy_set_header Host dashboards.malcolm.local;
     }
 
-    # Kibana -> Arkime shortcut
+    # Dashboards -> Arkime shortcut
     location ~* /idkib2mol/(.*) {
       rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
       proxy_pass http://docker-arkime;
@@ -166,7 +166,7 @@ http {
       proxy_set_header Authorization "";
     }
 
-    # Kibana/Arkime -> extracted file download
+    # Dashboards/Arkime -> extracted file download
     location ~* /dl-extracted-files/(.*) {
       rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
       proxy_pass http://docker-extracted-file-http-server;
@@ -174,25 +174,18 @@ http {
       proxy_set_header Host file-monitor.malcolm.local;
     }
 
-    # already prepended /kibana to match the server.basePath in kibana's YML config file
-    location /kibana {
-      proxy_pass http://docker-kibana;
+    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards's YML config file
+    location /dashboards {
+      proxy_pass http://docker-dashboards;
       proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
+      proxy_set_header Host dashboards.malcolm.local;
     }
 
-    # otherwise (from old kibana bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
-    location /app {
-      proxy_pass http://docker-kibana/kibana/app;
-      proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
-    }
-
-    # offline region maps for kibana
+    # offline region maps for dashboards
     location /world.geojson {
-      proxy_pass http://docker-kibana-maps;
+      proxy_pass http://docker-dashboards-maps;
       proxy_redirect off;
-      proxy_set_header Host kibana-helper.malcolm.local;
+      proxy_set_header Host dashboards-helper.malcolm.local;
     }
 
     # name-map-ui (UI for mapping names to network hosts and subnets)
@@ -237,7 +230,7 @@ http {
     }
   }
 
-  # Kibana interface
+  # OpenSearch dashboards interface
   server {
     listen 5601 ssl;
     ssl_certificate /etc/nginx/certs/cert.pem;
@@ -250,7 +243,7 @@ http {
       alias /etc/nginx/favicon.ico;
     }
 
-    # Kibana -> Arkime shortcut
+    # Dashboards -> Arkime shortcut
     location ~* /idkib2mol/(.*) {
       rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
       proxy_pass http://docker-arkime;
@@ -260,7 +253,7 @@ http {
       proxy_set_header Authorization "";
     }
 
-    # Kibana -> extracted file download
+    # Dashboards -> extracted file download
     location ~* /dl-extracted-files/(.*) {
       rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
       proxy_pass http://docker-extracted-file-http-server;
@@ -268,19 +261,19 @@ http {
       proxy_set_header Host file-monitor.malcolm.local;
     }
 
-    # already prepended /kibana to match the server.basePath in kibana's YML config file
-    location /kibana {
-      proxy_pass http://docker-kibana;
+    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
+    location /dashboards {
+      proxy_pass http://docker-dashboards;
       proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
+      proxy_set_header Host dashboards.malcolm.local;
     }
 
-    # otherwise prepend /kibana to match the server.basePath in kibana's YML config file
+    # otherwise prepend /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
     location / {
-      rewrite ^/(.*) /kibana/$1;
-      proxy_pass http://docker-kibana;
+      rewrite ^/(.*) /dashboards/$1;
+      proxy_pass http://docker-dashboards;
       proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
+      proxy_set_header Host dashboards.malcolm.local;
     }
   }
 
