--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,7 +181,7 @@ services:
       << : *process-variables
       << : *dashboards-helper-variables
       OPENSEARCH_URL : 'http://opensearch:9200'
-      DASHBOARDS_URL : 'http://dashboards:5601/opensearch-dashboards'
+      DASHBOARDS_URL : 'http://dashboards:5601/dashboards'
       VIRTUAL_HOST : 'dashboards-helper.malcolm.local'
       ARKIME_INDEX_PATTERN : 'sessions2-*'
       ARKIME_INDEX_PATTERN_ID : 'sessions2-*'
@@ -218,7 +218,7 @@ services:
     expose:
       - 5601
     healthcheck:
-      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5601/opensearch-dashboards/api/status"]
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5601/dashboards/api/status"]
       interval: 30s
       timeout: 15s
       retries: 3
@@ -568,7 +568,7 @@ services:
       << : *nginx-variables
     depends_on:
       - arkime
-      - opensearch-dashboards
+      - dashboards
       - upload
       - htadmin
       - name-map-ui
