--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,43 +29,43 @@ http {
   # if LDAP authentication is enabled, this will configure the ldap_server section
   include /etc/nginx/nginx_ldap_rt.conf;
 
-  upstream docker-arkime {
+  upstream arkime {
     server arkime:8005;
   }
 
-  upstream docker-malcolm-readme {
+  upstream malcolm-readme {
     server arkime:8000;
   }
 
-  upstream docker-upload {
+  upstream upload {
     server upload:80;
   }
 
-  upstream docker-htadmin {
+  upstream htadmin {
     server htadmin:80;
   }
 
-  upstream docker-dashboards {
+  upstream dashboards {
     server dashboards:5601;
   }
 
-  upstream docker-dashboards-maps {
+  upstream dashboards-maps {
     server dashboards-helper:28991;
   }
 
-  upstream docker-opensearch {
+  upstream opensearch {
     server opensearch:9200;
   }
 
-  upstream docker-logstash-stats {
+  upstream logstash-stats {
     server logstash:9600;
   }
 
-  upstream docker-name-map-ui {
+  upstream name-map-ui {
     server name-map-ui:8080;
   }
 
-  upstream docker-extracted-file-http-server {
+  upstream extracted-file-http-server {
     server file-monitor:8440;
   }
 
@@ -76,7 +76,7 @@ http {
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
     location / {
-      proxy_pass http://docker-htadmin;
+      proxy_pass http://htadmin;
       proxy_redirect off;
       proxy_set_header Host htadmin.malcolm.local;
     }
@@ -93,7 +93,7 @@ http {
 
     # Malcolm readme
     location /readme {
-      proxy_pass http://docker-malcolm-readme/README.html;
+      proxy_pass http://malcolm-readme/README.html;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
     }
@@ -102,7 +102,7 @@ http {
     location /upload {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
-      proxy_pass http://docker-upload/;
+      proxy_pass http://upload/;
       proxy_redirect off;
       proxy_set_header Host upload.malcolm.local;
       proxy_request_buffering off;
@@ -112,7 +112,7 @@ http {
     location /server/php {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
-      proxy_pass http://docker-upload/server/php/;
+      proxy_pass http://upload/server/php/;
       proxy_redirect off;
       proxy_set_header Host upload.malcolm.local;
       proxy_request_buffering off;
@@ -122,7 +122,7 @@ http {
 
     # Logstash statistics
     location ~* ^/logstash\b(.*) {
-      proxy_pass http://docker-logstash-stats/_node/stats$1;
+      proxy_pass http://logstash-stats/_node/stats$1;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
     }
@@ -151,7 +151,7 @@ http {
       }
 
       rewrite ^/idmol2kib/(.*) /dashboards/app/discover#/?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
-      proxy_pass http://docker-dashboards;
+      proxy_pass http://dashboards;
       proxy_redirect off;
       proxy_set_header Host dashboards.malcolm.local;
     }
@@ -159,7 +159,7 @@ http {
     # Dashboards -> Arkime shortcut
     location ~* /idkib2mol/(.*) {
       rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
-      proxy_pass http://docker-arkime;
+      proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
@@ -169,35 +169,35 @@ http {
     # Dashboards/Arkime -> extracted file download
     location ~* /dl-extracted-files/(.*) {
       rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
-      proxy_pass http://docker-extracted-file-http-server;
+      proxy_pass http://extracted-file-http-server;
       proxy_redirect off;
       proxy_set_header Host file-monitor.malcolm.local;
     }
 
     # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards's YML config file
     location /dashboards {
-      proxy_pass http://docker-dashboards;
+      proxy_pass http://dashboards;
       proxy_redirect off;
       proxy_set_header Host dashboards.malcolm.local;
     }
 
     # offline region maps for dashboards
     location /world.geojson {
-      proxy_pass http://docker-dashboards-maps;
+      proxy_pass http://dashboards-maps;
       proxy_redirect off;
       proxy_set_header Host dashboards-helper.malcolm.local;
     }
 
     # name-map-ui (UI for mapping names to network hosts and subnets)
     location /name-map-ui {
-      proxy_pass http://docker-name-map-ui/;
+      proxy_pass http://name-map-ui/;
       proxy_redirect off;
       proxy_set_header Host name-map-ui.malcolm.local;
       proxy_cache off;
     }
 
     location ~* ^/extracted-files\b(.*) {
-      proxy_pass http://docker-extracted-file-http-server$1;
+      proxy_pass http://extracted-file-http-server$1;
       proxy_redirect off;
       proxy_set_header Host file-monitor.malcolm.local;
     }
@@ -214,7 +214,7 @@ http {
       add_header Content-Type "application/javascript";
       default_type application/javascript;
       add_header X-Content-Type-Options 'nosniff';
-      proxy_pass http://docker-arkime/cyberchef/$1;
+      proxy_pass http://arkime/cyberchef/$1;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
@@ -222,7 +222,7 @@ http {
     }
 
     location / {
-      proxy_pass http://docker-arkime;
+      proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
@@ -246,7 +246,7 @@ http {
     # Dashboards -> Arkime shortcut
     location ~* /idkib2mol/(.*) {
       rewrite ^.*/idkib2mol/(.*) /sessions?expression=($1) redirect;
-      proxy_pass http://docker-arkime;
+      proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
@@ -256,14 +256,14 @@ http {
     # Dashboards -> extracted file download
     location ~* /dl-extracted-files/(.*) {
       rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
-      proxy_pass http://docker-extracted-file-http-server;
+      proxy_pass http://extracted-file-http-server;
       proxy_redirect off;
       proxy_set_header Host file-monitor.malcolm.local;
     }
 
     # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
     location /dashboards {
-      proxy_pass http://docker-dashboards;
+      proxy_pass http://dashboards;
       proxy_redirect off;
       proxy_set_header Host dashboards.malcolm.local;
     }
@@ -271,7 +271,7 @@ http {
     # otherwise prepend /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
     location / {
       rewrite ^/(.*) /dashboards/$1;
-      proxy_pass http://docker-dashboards;
+      proxy_pass http://dashboards;
       proxy_redirect off;
       proxy_set_header Host dashboards.malcolm.local;
     }
@@ -291,7 +291,7 @@ http {
     }
 
     location / {
-      proxy_pass http://docker-opensearch;
+      proxy_pass http://opensearch;
       proxy_redirect off;
       proxy_set_header Host es.malcolm.local;
       client_max_body_size 50m;
