work in progress elastic -> opensearch

--- a/logstash/pipelines/external/99_opensearch_output.conf
+++ b/logstash/pipelines/external/99_opensearch_output.conf
@@ -1,5 +1,5 @@
 output {
-  opensearch {
+  elasticsearch {
     id => "output_external_elasticsearch_moloch"
     hosts => "${ES_EXTERNAL_HOSTS}"
     ssl => "${ES_EXTERNAL_SSL:true}"
