various fixes for Malcolm's Arkime v3 (now 3.1.0) conversion

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -73,8 +73,8 @@ zeek.ts=db:zeek.ts;kind:termfield;friendly:Timestamp;help:Zeek Timestamp
 host.name=db:host.name;kind:termfield;friendly:Zeek Node;help:Zeek Node
 event.severity=db:event.severity;kind:integer;friendly:Severity;help:Severity
 event.severity_tags=db:event.severity_tags;kind:termfield;friendly:Severity Tags;help:Severity Tags
-event.risk_score=db:event.risk_score;kind:termfield;friendly:Risk Score;help:Risk Score
-event.risk_score_norm=db:event.risk_score_norm;kind:termfield;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
+event.risk_score=db:event.risk_score;kind:float;friendly:Risk Score;help:Risk Score
+event.risk_score_norm=db:event.risk_score_norm;kind:float;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
 
 # basic connection information
 zeek.orig_h=db:zeek.orig_h;kind:termfield;friendly:Originating host;help:Originating Host
@@ -103,8 +103,8 @@ zeek.result=db:zeek.result;kind:termfield;friendly:Result;help:Result
 zeek.user=db:zeek.user;kind:termfield;friendly:User;help:User
 zeek.user_agent=db:zeek.user_agent;kind:termfield;friendly:User Agent;help:User Agent
 zeek.password=db:zeek.password;kind:termfield;friendly:Password;help:Password
-zeek.freq_score_v1=db:zeek_dns.freq_score_v1;kind:termfield;friendly:Freq Score v1;help:Freq Score v1
-zeek.freq_score_v2=db:zeek_dns.freq_score_v2;kind:termfield;friendly:Freq Score v2;help:Freq Score v2
+zeek.freq_score_v1=db:zeek_dns.freq_score_v1;kind:float;friendly:Freq Score v1;help:Freq Score v1
+zeek.freq_score_v2=db:zeek_dns.freq_score_v2;kind:float;friendly:Freq Score v2;help:Freq Score v2
 
 # file information
 zeek.fuid=db:zeek.fuid;kind:termfield;friendly:File ID;help:File ID
