fix some zeek modbus log types not showing up

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -592,32 +592,32 @@ zeek_modbus.exception=db:zeek_modbus.exception;kind:termfield;friendly:Exception
 
 # modbus_detailed.log
 # https://github.com/cisagov/ICSNPP
-zeek_modbus_detailed.unit_id=db:modbus_detailed.unit_id;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
-zeek_modbus_detailed.func=db:modbus_detailed.func;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
-zeek_modbus_detailed.network_direction=db:modbus_detailed.network_direction;kind:termfield;friendly:Request or Response;help:Request or Response
-zeek_modbus_detailed.address=db:modbus_detailed.address;kind:integer;friendly:Starting Memory Address;help:Starting Memory Address
-zeek_modbus_detailed.quantity=db:modbus_detailed.quantity;kind:integer;friendly:Number of Values;help:Number of Values
-zeek_modbus_detailed.values=db:modbus_detailed.values;kind:termfield;friendly:Values;help:Values
+zeek_modbus_detailed.unit_id=db:zeek_modbus_detailed.unit_id;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
+zeek_modbus_detailed.func=db:zeek_modbus_detailed.func;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
+zeek_modbus_detailed.network_direction=db:zeek_modbus_detailed.network_direction;kind:termfield;friendly:Request or Response;help:Request or Response
+zeek_modbus_detailed.address=db:zeek_modbus_detailed.address;kind:integer;friendly:Starting Memory Address;help:Starting Memory Address
+zeek_modbus_detailed.quantity=db:zeek_modbus_detailed.quantity;kind:integer;friendly:Number of Values;help:Number of Values
+zeek_modbus_detailed.values=db:zeek_modbus_detailed.values;kind:termfield;friendly:Values;help:Values
 
 # modbus_mask_write_register.log
 # https://github.com/cisagov/ICSNPP
-zeek_modbus_mask_write_register.unit_id=db:modbus_mask_write_register.unit_id;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
-zeek_modbus_mask_write_register.func=db:modbus_mask_write_register.func;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
-zeek_modbus_mask_write_register.network_direction=db:modbus_mask_write_register.network_direction;kind:termfield;friendly:Request or Response;help:Request or Response
-zeek_modbus_mask_write_register.address=db:modbus_mask_write_register.address;kind:integer;friendly:Starting Memory Address;help:Starting Memory Address
-zeek_modbus_mask_write_register.and_mask=db:modbus_mask_write_register.and_mask;kind:integer;friendly:Boolean AND mask to apply to target register;help:Boolean AND mask to apply to target register
-zeek_modbus_mask_write_register.or_mask=db:modbus_mask_write_register.or_mask;kind:integer;friendly:Boolean OR mask to apply to target register;help:Boolean OR mask to apply to target register
+zeek_modbus_mask_write_register.unit_id=db:zeek_modbus_mask_write_register.unit_id;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
+zeek_modbus_mask_write_register.func=db:zeek_modbus_mask_write_register.func;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
+zeek_modbus_mask_write_register.network_direction=db:zeek_modbus_mask_write_register.network_direction;kind:termfield;friendly:Request or Response;help:Request or Response
+zeek_modbus_mask_write_register.address=db:zeek_modbus_mask_write_register.address;kind:integer;friendly:Starting Memory Address;help:Starting Memory Address
+zeek_modbus_mask_write_register.and_mask=db:zeek_modbus_mask_write_register.and_mask;kind:integer;friendly:Boolean AND mask to apply to target register;help:Boolean AND mask to apply to target register
+zeek_modbus_mask_write_register.or_mask=db:zeek_modbus_mask_write_register.or_mask;kind:integer;friendly:Boolean OR mask to apply to target register;help:Boolean OR mask to apply to target register
 
 # modbus_read_write_multiple_registers.log
 # https://github.com/cisagov/ICSNPP
-zeek_modbus_read_write_multiple_registers.unit_id=db:modbus_read_write_multiple_registers.unit_id;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
-zeek_modbus_read_write_multiple_registers.func=db:modbus_read_write_multiple_registers.func;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
-zeek_modbus_read_write_multiple_registers.network_direction=db:modbus_read_write_multiple_registers.network_direction;kind:termfield;friendly:Request or Response;help:Request or Response
-zeek_modbus_read_write_multiple_registers.write_start_address=db:modbus_read_write_multiple_registers.write_start_address;kind:integer;friendly:Starting address of the registers to write to;help:Starting address of the registers to write to
-zeek_modbus_read_write_multiple_registers.write_registers=db:modbus_read_write_multiple_registers.write_registers;kind:termfield;friendly:Register values written;help:Register values written
-zeek_modbus_read_write_multiple_registers.read_start_address=db:modbus_read_write_multiple_registers.read_start_address;kind:integer;friendly:Starting address of the registers to read;help:Starting address of the registers to read
-zeek_modbus_read_write_multiple_registers.read_quantity=db:modbus_read_write_multiple_registers.read_quantity;kind:integer;friendly:Number of registers to read;help:Number of registers to read
-zeek_modbus_read_write_multiple_registers.read_registers=db:modbus_read_write_multiple_registers.read_registers;kind:termfield;friendly:Register values read;help:Register values read
+zeek_modbus_read_write_multiple_registers.unit_id=db:zeek_modbus_read_write_multiple_registers.unit_id;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
+zeek_modbus_read_write_multiple_registers.func=db:zeek_modbus_read_write_multiple_registers.func;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
+zeek_modbus_read_write_multiple_registers.network_direction=db:zeek_modbus_read_write_multiple_registers.network_direction;kind:termfield;friendly:Request or Response;help:Request or Response
+zeek_modbus_read_write_multiple_registers.write_start_address=db:zeek_modbus_read_write_multiple_registers.write_start_address;kind:integer;friendly:Starting address of the registers to write to;help:Starting address of the registers to write to
+zeek_modbus_read_write_multiple_registers.write_registers=db:zeek_modbus_read_write_multiple_registers.write_registers;kind:termfield;friendly:Register values written;help:Register values written
+zeek_modbus_read_write_multiple_registers.read_start_address=db:zeek_modbus_read_write_multiple_registers.read_start_address;kind:integer;friendly:Starting address of the registers to read;help:Starting address of the registers to read
+zeek_modbus_read_write_multiple_registers.read_quantity=db:zeek_modbus_read_write_multiple_registers.read_quantity;kind:integer;friendly:Number of registers to read;help:Number of registers to read
+zeek_modbus_read_write_multiple_registers.read_registers=db:zeek_modbus_read_write_multiple_registers.read_registers;kind:termfield;friendly:Register values read;help:Register values read
 
 # modbus_register_change.log
 # https://docs.zeek.org/en/stable/scripts/policy/protocols/modbus/track-memmap.zeek.html#type-Modbus::MemmapInfo
