work for zeek v4.1.1, see idaholab/Malcolm#59

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3187,17 +3187,22 @@ filter {
 
     if ([@metadata][zeek_fields_bitmap] and [@metadata][zeek_fields_bitmap_version]) {
 
-      # bitmap ssl.log field configuration version 0
+      # bitmap ssl.log (pre v4.1.0) field configuration version 0
       #
       # standard ssl.log fields without add-on JA3 fingerprinting script :  0x001FFFFF / 2097151
       # ssl.log fields with add-on JA3 fingerprinting script :              0x007FFFFF / 8388607
+      #
+      # bitmap ssl.log (v4.1.0+) field configuration version 1
+      #
+      # standard ssl.log fields without add-on JA3 fingerprinting script :  0x0007FFFF /  524287
+      # ssl.log fields with add-on JA3 fingerprinting script :              0x001FFFFF / 2097151
 
       if ([@metadata][zeek_fields_bitmap_version] == 0) {
 
         if ([@metadata][zeek_fields_bitmap] == 8388607) {
 
           dissect {
-            id => "dissect_zeek_ssl_with_ja3"
+            id => "dissect_zeek_ssl_v0_with_ja3"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
             mapping => {
               "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][ssl_version]}	%{[zeek_cols][cipher]}	%{[zeek_cols][curve]}	%{[zeek_cols][server_name]}	%{[zeek_cols][resumed]}	%{[zeek_cols][last_alert]}	%{[zeek_cols][next_protocol]}	%{[zeek_cols][established]}	%{[zeek_cols][cert_chain_fuids]}	%{[zeek_cols][client_cert_chain_fuids]}	%{[zeek_cols][subject]}	%{[zeek_cols][issuer]}	%{[zeek_cols][client_subject]}	%{[zeek_cols][client_issuer]}	%{[zeek_cols][validation_status]}	%{[zeek_cols][ja3]}	%{[zeek_cols][ja3s]}"
@@ -3207,7 +3212,7 @@ filter {
         } else if ([@metadata][zeek_fields_bitmap] == 2097151) {
 
           dissect {
-            id => "dissect_zeek_ssl_without_ja3"
+            id => "dissect_zeek_ssl_v0_without_ja3"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
             mapping => {
               "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][ssl_version]}	%{[zeek_cols][cipher]}	%{[zeek_cols][curve]}	%{[zeek_cols][server_name]}	%{[zeek_cols][resumed]}	%{[zeek_cols][last_alert]}	%{[zeek_cols][next_protocol]}	%{[zeek_cols][established]}	%{[zeek_cols][cert_chain_fuids]}	%{[zeek_cols][client_cert_chain_fuids]}	%{[zeek_cols][subject]}	%{[zeek_cols][issuer]}	%{[zeek_cols][client_subject]}	%{[zeek_cols][client_issuer]}	%{[zeek_cols][validation_status]}"
@@ -3216,7 +3221,35 @@ filter {
 
         } else {
           # who knows? the ssl.log preprocessed bitmap is not one we're expecting, we've got to guess and cannot use dissect
-          mutate { id => "mutate_add_tag_dissect_failure_unknown_ssl_bitmap"
+          mutate { id => "mutate_add_tag_dissect_failure_unknown_ssl_v0_bitmap"
+                   add_tag => [ "_dissectfailure" ] }
+        }
+
+      } else if ([@metadata][zeek_fields_bitmap_version] == 1) {
+
+        if ([@metadata][zeek_fields_bitmap] == 2097151) {
+
+          dissect {
+            id => "dissect_zeek_ssl_v1_with_ja3"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][ssl_version]}	%{[zeek_cols][cipher]}	%{[zeek_cols][curve]}	%{[zeek_cols][server_name]}	%{[zeek_cols][resumed]}	%{[zeek_cols][last_alert]}	%{[zeek_cols][next_protocol]}	%{[zeek_cols][established]}	%{[zeek_cols][ssl_history]}	%{[zeek_cols][cert_chain_fuids]}	%{[zeek_cols][client_cert_chain_fuids]}	%{[zeek_cols][sni_matches_cert]}	%{[zeek_cols][validation_status]}	%{[zeek_cols][ja3]}	%{[zeek_cols][ja3s]}"
+            }
+          }
+
+        } else if ([@metadata][zeek_fields_bitmap] == 524287) {
+
+          dissect {
+            id => "dissect_zeek_ssl_v1_without_ja3"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][ssl_version]}	%{[zeek_cols][cipher]}	%{[zeek_cols][curve]}	%{[zeek_cols][server_name]}	%{[zeek_cols][resumed]}	%{[zeek_cols][last_alert]}	%{[zeek_cols][next_protocol]}	%{[zeek_cols][established]}	%{[zeek_cols][ssl_history]}	%{[zeek_cols][cert_chain_fuids]}	%{[zeek_cols][client_cert_chain_fuids]}	%{[zeek_cols][sni_matches_cert]}	%{[zeek_cols][validation_status]}"
+            }
+          }
+
+        } else {
+          # who knows? the ssl.log preprocessed bitmap is not one we're expecting, we've got to guess and cannot use dissect
+          mutate { id => "mutate_add_tag_dissect_failure_unknown_ssl_v1_bitmap"
                    add_tag => [ "_dissectfailure" ] }
         }
 
@@ -3240,7 +3273,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_ssl"
-        init => "$zeek_ssl_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'ssl_version', 'cipher', 'curve', 'server_name', 'resumed', 'last_alert', 'next_protocol', 'established', 'cert_chain_fuids', 'client_cert_chain_fuids', 'subject', 'issuer', 'client_subject', 'client_issuer', 'validation_status', 'ja3', 'ja3s' ]"
+        init => "$zeek_ssl_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'ssl_version', 'cipher', 'curve', 'server_name', 'resumed', 'last_alert', 'next_protocol', 'established', 'ssl_history', 'cert_chain_fuids', 'client_cert_chain_fuids', 'sni_matches_cert', 'validation_status', 'ja3', 'ja3s' ]"
         code => "event.set('[zeek_cols]', $zeek_ssl_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -3484,13 +3517,54 @@ filter {
     # x509.log
     # https://docs.zeek.org/en/stable/scripts/base/files/x509/main.zeek.html#type-X509::Info
 
-    dissect {
-      id => "dissect_zeek_x509"
-      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-      mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][fuid]}	%{[zeek_cols][certificate_version]}	%{[zeek_cols][certificate_serial]}	%{[zeek_cols][certificate_subject]}	%{[zeek_cols][certificate_issuer]}	%{[zeek_cols][certificate_not_valid_before]}	%{[zeek_cols][certificate_not_valid_after]}	%{[zeek_cols][certificate_key_alg]}	%{[zeek_cols][certificate_sig_alg]}	%{[zeek_cols][certificate_key_type]}	%{[zeek_cols][certificate_key_length]}	%{[zeek_cols][certificate_exponent]}	%{[zeek_cols][certificate_curve]}	%{[zeek_cols][san_dns]}	%{[zeek_cols][san_uri]}	%{[zeek_cols][san_email]}	%{[zeek_cols][san_ip]}	%{[zeek_cols][basic_constraints_ca]}	%{[zeek_cols][basic_constraints_path_len]}"
+    if ([@metadata][zeek_fields_bitmap] and [@metadata][zeek_fields_bitmap_version]) {
+
+      # bitmap x509.log field configuration version 0
+      # zeek 4.1.x added host_cert, client_cert
+      #
+      # pre-v4.1.x x509.log without host_cert, client_cert : 0x000FFFFF / 1048575
+      #     v4.1.x x509.log with    host_cert, client_cert : 0x003FFFFF / 4194303
+
+      if ([@metadata][zeek_fields_bitmap_version] == 0) {
+
+        if ([@metadata][zeek_fields_bitmap] == 4194303) {
+
+          dissect {
+            id => "dissect_zeek_x509_v410"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][fuid]}	%{[zeek_cols][certificate_version]}	%{[zeek_cols][certificate_serial]}	%{[zeek_cols][certificate_subject]}	%{[zeek_cols][certificate_issuer]}	%{[zeek_cols][certificate_not_valid_before]}	%{[zeek_cols][certificate_not_valid_after]}	%{[zeek_cols][certificate_key_alg]}	%{[zeek_cols][certificate_sig_alg]}	%{[zeek_cols][certificate_key_type]}	%{[zeek_cols][certificate_key_length]}	%{[zeek_cols][certificate_exponent]}	%{[zeek_cols][certificate_curve]}	%{[zeek_cols][san_dns]}	%{[zeek_cols][san_uri]}	%{[zeek_cols][san_email]}	%{[zeek_cols][san_ip]}	%{[zeek_cols][basic_constraints_ca]}	%{[zeek_cols][basic_constraints_path_len]}	%{[zeek_cols][host_cert]}	%{[zeek_cols][client_cert]}"
+            }
+          }
+
+        } else if ([@metadata][zeek_fields_bitmap] == 1048575) {
+
+          dissect {
+            id => "dissect_zeek_x509_pre_v410"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][fuid]}	%{[zeek_cols][certificate_version]}	%{[zeek_cols][certificate_serial]}	%{[zeek_cols][certificate_subject]}	%{[zeek_cols][certificate_issuer]}	%{[zeek_cols][certificate_not_valid_before]}	%{[zeek_cols][certificate_not_valid_after]}	%{[zeek_cols][certificate_key_alg]}	%{[zeek_cols][certificate_sig_alg]}	%{[zeek_cols][certificate_key_type]}	%{[zeek_cols][certificate_key_length]}	%{[zeek_cols][certificate_exponent]}	%{[zeek_cols][certificate_curve]}	%{[zeek_cols][san_dns]}	%{[zeek_cols][san_uri]}	%{[zeek_cols][san_email]}	%{[zeek_cols][san_ip]}	%{[zeek_cols][basic_constraints_ca]}	%{[zeek_cols][basic_constraints_path_len]}"
+            }
+          }
+
+        } else {
+          # who knows? the x509.log preprocessed bitmap is not one we're expecting, we've got to guess and cannot use dissect
+          mutate { id => "mutate_add_tag_dissect_failure_unknown_x509_bitmap"
+                   add_tag => [ "_dissectfailure" ] }
+        }
+
+      } else {
+        # who knows? the x509.log preprocessed bitmap field list version is not one we're expecting, we've got to guess and cannot use dissect
+        mutate { id => "mutate_add_tag_dissect_failure_unknown_bitmap_x509_version"
+                 add_tag => [ "_dissectfailure" ] }
       }
+
+    } else {
+      # who knows? the x509.log was not preprocessed to determine fields, we've got to guess and cannot use dissect
+      mutate { id => "mutate_add_tag_dissect_failure_missing_x509_bitmap"
+               add_tag => [ "_dissectfailure" ] }
     }
+
     if ("_dissectfailure" in [tags]) {
       mutate {
         id => "mutate_split_zeek_x509"
@@ -3499,7 +3573,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_x509"
-        init => "$zeek_x509_field_names = [ 'ts', 'fuid', 'certificate_version', 'certificate_serial', 'certificate_subject', 'certificate_issuer', 'certificate_not_valid_before', 'certificate_not_valid_after', 'certificate_key_alg', 'certificate_sig_alg', 'certificate_key_type', 'certificate_key_length', 'certificate_exponent', 'certificate_curve', 'san_dns', 'san_uri', 'san_email', 'san_ip', 'basic_constraints_ca', 'basic_constraints_path_len' ]"
+        init => "$zeek_x509_field_names = [ 'ts', 'fuid', 'certificate_version', 'certificate_serial', 'certificate_subject', 'certificate_issuer', 'certificate_not_valid_before', 'certificate_not_valid_after', 'certificate_key_alg', 'certificate_sig_alg', 'certificate_key_type', 'certificate_key_length', 'certificate_exponent', 'certificate_curve', 'san_dns', 'san_uri', 'san_email', 'san_ip', 'basic_constraints_ca', 'basic_constraints_path_len', 'host_cert', 'client_cert' ]"
         code => "event.set('[zeek_cols]', $zeek_x509_field_names.zip(event.get('[message]')).to_h)"
       }
     }
